# kestrel

./: .gitignore  ADAPTERS.md  CONTRIBUTING.md  CONVENTIONS.md  LEGAL.md  PRIVACY.md  README.md  SECURITY.md  STRATEGY.md  pyproject.toml
src/kestrel/: __init__.py
src/kestrel/mock_site/: __init__.py  app.py  cli.py  config.py  csrf.py  logging.py
src/kestrel/mock_site/fixtures/: __init__.py  personas.py  quote_compute.py
src/kestrel/mock_site/middleware/: __init__.py  challenge.py  latency.py  request_logger.py
src/kestrel/mock_site/routes/: __init__.py  challenge.py  health.py  quote.py  static.py
src/kestrel/mock_site/state/: __init__.py  janitor.py  memory.py  models.py  sqlite.py  store.py
src/kestrel/mock_site/static/: htmx.min.js  htmx.sha256
src/kestrel/mock_site/static/css/: persona_a.css  persona_b.css  persona_c.css
src/kestrel/mock_site/templates/: base.html  challenge.html
src/kestrel/mock_site/templates/persona_a/: quote_result.html  step_01_vehicle.html  step_02_vehicle_mods.html  step_03_parking.html  step_04_mileage.html  step_05_driver_1.html  step_06_driver_1_history.html  step_07_additional_drivers.html  step_08_address.html  step_09_cover.html  step_10_review.html
src/kestrel/mock_site/templates/persona_b/: challenge.html  quote_result.html  step_01_vehicle.html  step_02_vehicle_mods.html  step_03_parking.html  step_04_mileage.html  step_05_driver_1.html  step_06_driver_1_history.html  step_07_additional_drivers.html  step_08_address.html  step_09_cover.html  step_10_review.html
src/kestrel/mock_site/templates/persona_c/: challenge.html  quote_result.html  step_01_vehicle.html  step_02_vehicle_mods.html  step_03_parking.html  step_04_mileage.html  step_05_driver_1.html  step_06_driver_1_history.html  step_07_additional_drivers.html  step_08_address.html  step_09_cover.html  step_10_review.html
src/kestrel/mock_site/templates/persona_c/easy/: quote_result.html  step_01_vehicle.html  step_02_vehicle_mods.html  step_03_parking.html  step_04_mileage.html  step_05_driver_1.html  step_06_driver_1_history.html  step_07_additional_drivers.html  step_08_address.html  step_09_cover.html  step_10_review.html
src/kestrel/mock_site/validation/: __init__.py  dob.py  postcode.py  result.py  scalars.py  vrn.py
tests/mock_site/: conftest.py  test_app_factory.py  test_challenge_stub.py  test_cli.py  test_csrf.py  test_easy_no_js.py  test_form_state_models.py  test_form_steps.py  test_health.py  test_htmx_negotiation.py  test_janitor.py  test_latency.py  test_logging.py  test_middleware_order.py  test_no_external_egress.py  test_persona_divergence.py  test_quote_compute.py  test_session_store_memory.py  test_session_store_sqlite.py  test_settings_from_env.py  test_sqlite_recovery.py  test_static_integrity.py  test_validation_dob.py  test_validation_postcode.py  test_validation_scalars.py  test_validation_vrn.py  test_vocab_blocklist.py
tests/mock_site/fixtures/: golden_premiums.json
